add settingClass